tools/gen/24.1-beta/rpk-acl-delete.adoc
= rpk acl delete
:description: rpk acl delete

Delete ACLs.

See the 'rpk acl' help text for a full write up on ACLs. Delete flags work in a
similar multiplying effect as creating ACLs, but delete is more advanced:
deletion works on a filter basis. Any unspecified flag defaults to matching
everything (all operations, or all allowed principals, etc). To ensure that you
do not accidentally delete more than you intend, this command prints everything
that matches your input filters and prompts for a confirmation before the
delete request is issued. Anything matching more than 10 ACLs doubly confirms.

As mentioned, not specifying flags matches everything. If no resources are
specified, all resources are matched. If no operations are specified, all
operations are matched. You can also opt in to matching everything with "any":
--operation any matches any operation.

The --resource-pattern-type, defaulting to "any", configures how to filter
resource names:
  * "any" returns exact name matches of either prefixed or literal pattern type
  * "match" returns wildcard matches, prefix patterns that match your input, and literal matches
  * "prefix" returns prefix patterns that match your input (prefix "fo" matches "foo")
  * "literal" returns exact name matches

== Usage

[,bash]
----
rpk acl delete [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|--allow-host |strings |Allowed host ACLs to remove (repeatable).

|--allow-principal |strings |Allowed principal ACLs to remove (repeatable).

|--allow-role |strings |Allowed role ACLs to remove (repeatable).

|--cluster |- |Whether to remove ACLs to the cluster.

|--deny-host |strings |Denied host ACLs to remove (repeatable).

|--deny-principal |strings |Denied principal ACLs to remove (repeatable).

|--deny-role |strings |Denied role ACLs to remove (repeatable).

|-d, --dry |- |Dry run: validate what would be deleted.

|--group |strings |Group to remove ACLs for (repeatable).

|-h, --help |- |Help for delete.

|--no-confirm |- |Disable confirmation prompt.

|--operation |strings |Operation to remove (repeatable).

|-f, --print-filters |- |Print the filters that were requested (failed filters are always printed).

|--resource-pattern-type |string |Pattern to use when matching resource names (any, match, literal, or prefixed) (default "any").

|--topic |strings |Topic to remove ACLs for (repeatable).

|--transactional-id |strings |Transactional IDs to remove ACLs for (repeatable).

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===